Cleanup (#1)
* remove code to clean up db
